[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "simplepower"
version = "0.0.1"
requires-python = ">=3.10.0"
dependencies = [
    "numpy==1.25",
    "pandas==2.0.3",
    "scipy==1.11.2",
    "matplotlib==3.7.2", 
    "openpyxl==3.1.2"
]
